# buildllm

./: 01.pytorch.ipynb  README.md  SETUP.md  app.py  pyproject.toml
.github/workflows/: ph2-qlora-finetunning.yml
notebooks/: 02.Code an LLM.ipynb  03.CodeLLM-Stage1-Attention.ipynb  07.Tranformers.ipynb  vscode.ipynb
notebooks/finetunning/: .gitignore  02.Objective-Based Fine-Tunning.ipynb  03.full_vs_partial_tunning.ipynb  04.peft-lora.ipynb  05.peft-lora-demo.ipynb  06.quantization.ipynb  08.peft-qlora-demo.ipynb  21.ph2-qlora-finetunning.ipynb  22.llama2-lora-finetunned.ipynb  99.Hindu Epics.ipynb
notebooks/pytorch/: 01.pytorch.ipynb  02.pytorch.ipynb  03.linear_regression.ipynb  04.logistic_regression.ipynb  05.dataloaders.ipynb  06.softmax_cross-entropy.ipynb  07.actiovation_functions.ipynb  08.feed_forward.ipynb  09.convolutional_network.ipynb  10.transfer_learning.ipynb  99.mini_transformer.ipynb  Notes.docx  pytorch.ipynb
outputs/: gpt_training_data.pt
src/hindu-epic-finetunned/: README.md
src/hindu-epic-finetunned/configs/: lora_config.json
src/hindu-epic-finetunned/data/: gita.txt  mahabharath.txt  ramayan.txt
src/hindu-epic-finetunned/src/: data_prep.py  inference.py  train.py
src/ph2-qlora-finetunning/: train-in-git-qlora.py
