[project]
name = "agents"
version = "0.1.0"
description = "Build LLM from Scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tiktoken>=0.12.0",
    "ipywidgets>=8.1.5",
    "torch>=2.9.0",
    "skilearn>=0.1.0",
    "matplotlib>=3.10.7"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
