[project]
name = "buildllm"
version = "0.1.0"
description = "Build LLM from Scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "torch>=2.9.0",

    # Hugging Face ecosystem
    "transformers>=4.57.3",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "peft>=0.18.0",
    "tiktoken>=0.12.0",
    "bitsandbytes>=0.48.2",

    # Data / Analysis
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.7",

    # Utilities
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
